force-app/main/default/objects/FieloCH__ChallengeMember__c/FieloCH__ChallengeMember__c.object-meta.xml
<CustomObject>
    <label>Challenge Member</label>
    <nameField>
        <displayFormat>CHM-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>