force-app/main/default/objects/FieloCH__ChallengeMember__c/fields/FieloCH__AlternativeKey__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__AlternativeKey__c</fullName>
    <label>AlternativeKey</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>