force-app/main/default/objects/FieloCH__ChallengeMember__c/fields/FieloCH__Challenge2__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Challenge2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Challenge</label>
    <referenceTo>FieloCH__Challenge__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>ChallengeMembers2</relationshipName>
    <type>Lookup</type>
</CustomField>