force-app/main/default/objects/FieloCH__ChallengeMember__c/fields/FieloCH__ChallengeReward__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__ChallengeReward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChallengeReward</label>
    <referenceTo>FieloCH__ChallengeReward__c</referenceTo>
    <relationshipName>ChallengeRewards</relationshipName>
    <type>Lookup</type>
</CustomField>