force-app/main/default/objects/FieloCH__ChallengeMember__c/fields/FieloCH__Counter__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Counter__c</fullName>
    <label>Counter</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>