force-app/main/default/objects/FieloCH__ChallengeMember__c/fields/FieloCH__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipLabel>Challenge Members</relationshipLabel>
    <relationshipName>ChallengesMembers</relationshipName>
    <type>Lookup</type>
</CustomField>