force-app/main/default/objects/FieloCH__ChallengeMember__c/fields/FieloCH__MemberEmail__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__MemberEmail__c</fullName>
    <label>Member Email</label>
    <type>Email</type>
</CustomField>