force-app/main/default/objects/FieloCH__ChallengeMember__c/fields/FieloCH__MissionAccomplished__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__MissionAccomplished__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count the amount of mission that the member has accomplished</description>
    <label>Mission Accomplished</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>