force-app/main/default/objects/FieloCH__ChallengeMember__c/fields/FieloCH__RewardDescription__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__RewardDescription__c</fullName>
    <formula>FieloCH__ChallengeReward__r.FieloCH__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reward Description</label>
    <type>Text</type>
</CustomField>