force-app/main/default/objects/FieloCH__ChallengeMember__c/fields/FieloCH__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accomplished</fullName>
            </value>
            <value>
                <fullName>Not Accomplished</fullName>
            </value>
            <value>
                <fullName>Unsubscribe</fullName>
            </value>
            <value>
                <fullName>Accomplished Pending</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>