force-app/main/default/objects/FieloCH__ChallengeMember__c/fields/FieloCH__Team__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>FieloCH__Team__c</referenceTo>
    <relationshipLabel>Challenge Members</relationshipLabel>
    <relationshipName>ChallengeMembers</relationshipName>
    <type>Lookup</type>
</CustomField>