force-app/main/default/objects/FieloCH__ChallengeMember__c/fields/FieloCH__Value__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>