force-app/main/default/objects/FieloCH__ChallengeMember__c/validationRules/FieloCH__FillMemberOrTeam.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloCH__FillMemberOrTeam</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK(FieloCH__Member__c), ISBLANK(FieloCH__Team__c) )</errorConditionFormula>
    <errorMessage>You must choose either a Member or a Team</errorMessage>
</ValidationRule>