force-app/main/default/objects/FieloCH__ChallengeMember__c/listViews/FieloCH__All.listView-meta.xml
<ListView>
    <fullName>FieloCH__All</fullName>
    <columns>NAME</columns>
    <columns>FieloCH__ChallengeReward__c</columns>
    <columns>FieloCH__Counter__c</columns>
    <columns>FieloCH__Member__c</columns>
    <columns>FieloCH__Status__c</columns>
    <columns>FieloCH__Value__c</columns>
    <columns>FieloCH__Team__c</columns>
    <columns>FieloCH__Position__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>